--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,22 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "knplabs/knp-menu-bundle": "dev-master",
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "doctrine/migrations": "dev-master",
+        "doctrine/doctrine-migrations-bundle": "dev-master",
+        "caragk/kdb-parameters-bundle": "dev-master",
+        "jms/di-extra-bundle": "dev-master",
+        "jms/security-extra-bundle": "dev-master",
+        "mopa/bootstrap-bundle": "dev-master",
+        "twbs/bootstrap": "dev-master",
+        "php-http/guzzle6-adapter": "^1.1",
+        "payum/payum-bundle": "^2.1",
+        "payum/paypal-express-checkout-nvp": "^1.3",
+        "payum/offline": "^1.3",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
