Adaptation du layout

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 # Assets and user uploads
 /web/bundles/
 /web/uploads/
+/web/js/
+/web/images/
+/web/css/
 
 # Assets managed by Bower
 /web/assets/vendor/
