--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ swiftmailer:
 assetic:
     debug:          %kernel.debug%
     use_controller: %kernel.debug%
-    bundles:        [MopaBootstrapBundle]
+    bundles:        [MopaBootstrapBundle, PigassCoreBundle]
     # java: /usr/bin/java
     filters:
         cssrewrite: ~
