Correction de core_structure_new

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -142,3 +142,6 @@ payum:
         config_storage:
             Pigass\UserBundle\Entity\Gateway: { doctrine: orm }
 
+jms_security_extra:
+    secure_all_services: true
+    enable_iddqd_attribute: false
