--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr_FR
+    logo_dir: '%kernel.root_dir%/../web/uploads/'
 
 framework:
     #esi:             ~
