--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -147,3 +147,8 @@ jms_security_extra:
     secure_all_services: true
     enable_iddqd_attribute: false
     expressions: true
+
+knp_snappy:
+    pdf:
+        enabled: true
+        binary:  %kernel.root_dir%/../vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
