--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
         "payum/payum-bundle": "^2.1",
         "payum/paypal-express-checkout-nvp": "^1.3",
         "payum/offline": "^1.3",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "knplabs/knp-snappy-bundle": "^1.4",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
