--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -152,3 +152,6 @@ knp_snappy:
     pdf:
         enabled: true
         binary:  %kernel.root_dir%/../vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
+        #binary:  /usr/bin/wkhtmltopdf
+        options:
+            - { name: 'page-size', value: 'A4' }
