--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "payum/offline": "^1.3",
         "symfony/assetic-bundle": "^2.8",
         "knplabs/knp-snappy-bundle": "^1.4",
-        "h4cc/wkhtmltopdf-amd64": "^0.12.3"
+        "h4cc/wkhtmltopdf-amd64": "^0.12.3",
+        "liuggio/excelbundle": "~2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
