--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -128,6 +128,8 @@ mopa_bootstrap:
                 icon_inverted: true
             widget_add_btn:
                 icon: plus-sign
+        horizontal_label_class: col-sm-2
+        horizontal_input_wrapper_class: col-sm-10
     menu: ~
     navbar: ~
     initializr: 
