--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.1.*",
+        "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -22,16 +22,16 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "knplabs/knp-menu-bundle": "dev-master",
-        "knplabs/knp-paginator-bundle": "dev-master",
-        "doctrine/migrations": "dev-master",
-        "doctrine/doctrine-migrations-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "knplabs/knp-menu-bundle": "^2.0",
+        "knplabs/knp-paginator-bundle": "^2.7",
+        "doctrine/migrations": "^1.5",
+        "doctrine/doctrine-migrations-bundle": "^1.0",
         "caragk/kdb-parameters-bundle": "dev-master",
-        "jms/di-extra-bundle": "dev-master",
-        "jms/security-extra-bundle": "dev-master",
-        "mopa/bootstrap-bundle": "dev-master",
-        "twbs/bootstrap": "dev-master",
+        "jms/di-extra-bundle": "1.9.*",
+        "jms/security-extra-bundle": "1.6.*",
+        "mopa/bootstrap-bundle": "^3.2",
+        "twbs/bootstrap": "^3.3",
         "php-http/guzzle6-adapter": "^1.1",
         "payum/payum-bundle": "^2.1",
         "payum/paypal-express-checkout-nvp": "^1.3",
@@ -40,7 +40,8 @@
         "knplabs/knp-snappy-bundle": "^1.4",
         "h4cc/wkhtmltopdf-amd64": "^0.12.3",
         "liuggio/excelbundle": "~2.0",
-        "vich/uploader-bundle": "^1.4"
+        "vich/uploader-bundle": "^1.4",
+        "jms/metadata": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -63,11 +64,6 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        }
     },
     "extra": {
         "symfony-app-dir": "app",
