--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0",
+        "friendsofsymfony/user-bundle": "2.0.2",
         "knplabs/knp-menu-bundle": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.7",
         "doctrine/migrations": "^1.5",
@@ -77,6 +77,11 @@
         },
         "branch-alias": {
             "dev-master": "3.1-dev"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.0.49"
         }
     }
 }
