--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "build": "encore production"
     },
     "dependencies": {
-        "jquery": "^3.3.1"
+        "jquery": "^3.3.1",
+        "jquery-mapael": "^2.2.0",
+        "raphael": "^2.2.7"
     }
 }
