--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ yarn-error.log
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+/public/uploads/*.*
+/public/uploads/signs/*
