Admin Dashboard et gestion des accès admin locaux

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/apache-pack": "^1.0",
         "symfony/console": "*",
         "symfony/dotenv": "*",
+        "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
@@ -28,6 +29,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/requirements-checker": "^1.1",
+        "symfony/security-bundle": "*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "*",
         "symfony/twig-bundle": "*",
