--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,18 +1,16 @@
 vich_uploader:
     db_driver: orm
-
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    twig: true
     mappings:
         structure_logo:
-            uri_prefix: /images/logos
+            uri_prefix: /uploads/logos
             upload_destination: '%kernel.project_dir%/public/uploads/logos'
+            inject_on_load:     true
+            delete_on_update:   true
+            delete_on_remove:   true
         receipt_sign:
             uri_prefix:         /uploads/signs
             upload_destination: '%kernel.project_dir%/public/uploads/signs'
             inject_on_load:     true
             delete_on_update:   true
             delete_on_remove:   true
-            #namer:              vich_uploader.namer_origname
