--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,12 +5,18 @@ vich_uploader:
         structure_logo:
             uri_prefix: /uploads/logos
             upload_destination: '%kernel.project_dir%/public/uploads/logos'
+            namer:
+                service: Vich\UploaderBundle\Naming\PropertyNamer
+                options: { property: slug }
             inject_on_load:     true
             delete_on_update:   true
             delete_on_remove:   true
         receipt_sign:
             uri_prefix:         /uploads/signs
             upload_destination: '%kernel.project_dir%/public/uploads/signs'
+            namer:
+                service: Vich\UploaderBundle\Naming\PropertyNamer
+                options: { property: filename }
             inject_on_load:     true
             delete_on_update:   true
             delete_on_remove:   true
