--- a/config/packages/knp_snappy.yaml
+++ b/config/packages/knp_snappy.yaml
@@ -1,7 +1,6 @@
 knp_snappy:
     pdf:
         enabled: true
-        binary:  "%kernel.project_dir%/vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64"
-        #binary:  /usr/bin/wkhtmltopdf
+        binary:  '%env(WKHTMLTOPDF_PATH)%'
         options:
             - { name: 'page-size', value: 'A4' }
